addProducts/add/drawerProducts/fixed/z-index

--- a/sass/components/_drawer.scss
+++ b/sass/components/_drawer.scss
@@ -10,7 +10,7 @@
   right: -100%;
   top: 0;
   transition: right 0.8s;
-  z-index: 1000;
+  z-index: 1012;
 }
 
 .drawer__wrapper {
@@ -52,17 +52,47 @@
 .drawer__container--products {
   color: $main-color;
   font-family: $paragraf;
-  font-size: $small-size-movil;
+  font-size: $medium-size-movil;
   margin-bottom: 3rem;
 }
 
-.drawer__line--button {
+.drawer__container--items {
   border-bottom: 0.2rem solid $main-background;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  button {
+    font-size: $medium-h3-size-desk;
+  }
+}
+
+.drawer__items--image {
+  margin-right: 3rem;
+  width: 25%;
+  img{
+    border-radius: $size;
+    width: 100%;
+  }
+
+  @media (min-width: 960px) {
+    margin-right: 5rem;
+    width: 20%;
+    img{
+      width: 100%;
+    }
+  }
+}
+
+.drawer__items--content {
+  margin-right: 3rem;
+
+  @media (min-width: 960px) {
+    margin-right: 5rem;
+
+  }
 }
 
 .drawer__btn--close {
-  flex-direction: row;
   padding: $size 3rem $size 2rem;
   // justify-content: flex-end;
 }
@@ -85,7 +115,3 @@
   }
 }
 
-.js__drawer--delete {
-  flex-direction: row;
-  justify-content: flex-end;
-}
